# bootstrap-tmpl

./: Cargo.toml  README.md  justfile
go/: Dockerfile  README.md  go.mod  go.sum  justfile  local.sample.json  main.go
go/config/: app.go  config.go  log.go  postgres.go  redis.go
go/errors/: error.go
go/http/: common.go  http.go
go/log/: log.go
go/observability/log/: context.go  default_logger.go  logger.go  stdlib_compat.go  uber_zap.go
go/otp/: otp.go  otp_test.go
go/postgres/: postgres.go
go/redis/: cache.go  redis.go
go/status/: postgres.go  redis.go  status.go
go/users/controller/: users.go
go/users/database/: users.go
go/users/model/: users.go
go/users/service/: users.go
go/utils/: utils.go
src/: cli.rs  main.rs
