[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
clap_complete = "4.1.0"
color-eyre = "0.6.2"
lazy_static = "1.4.0"
tera = "1.19.1"
xshell = "0.2.5"
